--- a/assets/styles/log_in.css
+++ b/assets/styles/log_in.css
@@ -61,9 +61,7 @@ h2 {
     padding: 5px 5px 5px 10px;
 
     border: none;
-    border-radius: 3px 3px 3px 3px;
-    -moz-border-radius: 3px 3px 3px 3px;
-    -webkit-border-radius: 3px 3px 3px 3px;
+    border-radius: 10px;
 }
 
 #login input::placeholder {
@@ -79,10 +77,7 @@ h2 {
     height: 40px;
     border: 200px;
 
-    border-radius: 6px 3px 3px 6px;
-    -moz-border-radius: 10px 10px 10px 10px;
-    -webkit-border-radius: 3px 3px 3px 3px;
-
+    border-radius: 50px;
     background-color: var(--Principal);
     margin-top: 50px;
 }
@@ -196,9 +191,8 @@ hr {
     background: #46c1f6;
 }
 
-.redes {
-    position: center;
-
+.redes{
+    position:center;
 }
 
 @media all and (max-width: 775px) {
