--- a/assets/styles/log_in.css
+++ b/assets/styles/log_in.css
@@ -9,9 +9,14 @@ body {
     font-weight: normal;
     font-size: 100%;
     color: #1b262c;
-
+    text-align: center;
     margin: 0;
     background-color: var(--Fondo);
+}
+
+hr {
+    border-top: 1px solid #4f4a47;
+    border-bottom: 1px solid #dfcdc3;
 }
 
 h1 {
@@ -22,12 +27,39 @@ h1 {
 }
 
 h2 {
-    margin-left: 300px;
+    font-family: 'Overpass', sans-serif;
+    
     height: 210px;
-    position: relative;
-    top: 100px;
+
+    top: 80px;
+    text-align: center;
 }
 
+h3{
+    display:inline-block;
+    text-align: center;
+    position: relative;
+    color: #A4A2A2;
+    top: 50px;
+}
+
+h3::after,h3::before{
+    content: '';
+    position: absolute;
+    text-align: center;
+    height: 3px;
+    width: 100px;
+    background-color: #A4A2A2;
+    top: 0.6em;
+
+}
+h3::after{
+    left: -120px;
+}
+
+h3::before{
+right: -120px;
+}
 #login {
     display: flex;
     align-items: center;
@@ -35,6 +67,7 @@ h2 {
     width: 100%;
     position: relative;
     right: 80px;
+   top:20px;
 
     background-color: var(--Fondo);
 }
@@ -73,13 +106,14 @@ h2 {
     font-family: 'Overpass', sans-serif;
     font-size: 110%;
     color: #e7edef;
-    width: 100%;
+    width: 60%;
     height: 40px;
     border: 200px;
 
     border-radius: 50px;
     background-color: var(--Principal);
     margin-top: 50px;
+ 
 }
 
 #login button:hover {
@@ -95,14 +129,6 @@ h2 {
     text-align: center;
 }
 
-.logo {
-
-    margin-left: 250px;
-    height: 200px;
-    position: relative;
-    top: 200px;
-}
-
 #derecho {
 
     text-align: right;
@@ -114,17 +140,17 @@ h2 {
     padding: 20px 20px 20px 50px;
     box-sizing: border-box;
 }
+#logo {
 
+   margin-right: 250px;
+    text-align: center;
+   
+}
 .titulo {
     font-size: 300%;
     background-color: var(--negro);
 }
 
-hr {
-    border-top: 1px solid #4f4a47;
-    border-bottom: 1px solid #dfcdc3;
-
-}
 
 .cli-form {
     font-size: 90%;
@@ -137,19 +163,23 @@ hr {
     text-decoration: none;
     color: #4f4a47;
     margin-bottom: 3px;
+   
 }
 
 .cli-form a:hover {
-    color: #d0af83;
+    color: #d0af83; 
+   
 }
 
 .wrapper .icon span i {
     line-height: 60px;
-    font-size: 25px;
+    font-size: 35px;
+    
 }
 
 .wrapper {
     display: inline-flex;
+   
 }
 
 .wrapper .icon {
@@ -162,8 +192,9 @@ hr {
     flex-direction: column;
     position: center;
     z-index: 2;
-    transition: 0.4s cubic-bezier(0.68, -0.50, 0.30, 1.5);
+    transition: 0.4s cubic-bezier(0.68, -0.50, 0.30, 1.5); 
     color: var(--Fondo);
+    top:50px;
 
 }
 
@@ -176,7 +207,7 @@ hr {
     position: relative;
     z-index: 2;
     box-shadow: 0px 10px 10px rgba(98, 9, 170, 0.1);
-
+   top:50px;
 }
 
 .wrapper .facebook span {
