--- a/assets/styles/log_in.css
+++ b/assets/styles/log_in.css
@@ -14,21 +14,21 @@ body {
     background-color: var(--Fondo);
 }
 
-hr {
-    border-top: 1px solid #4f4a47;
-    border-bottom: 1px solid #dfcdc3;
-}
+
 
 h1 {
-    margin-left: 300px;
-    height: 210px;
-    position: relative;
-    top: 280px;
+    font-family: 'Overpass', sans-serif;
+    font-weight: normal;
+    text-align: center;
+    font-size: 150%;
+    height: 100px;
+ 
 }
 
 h2 {
     font-family: 'Overpass', sans-serif;
-    
+    font-weight: normal;
+    font-size: 300%;
     height: 210px;
 
     top: 80px;
@@ -36,6 +36,9 @@ h2 {
 }
 
 h3{
+    font-family: 'Overpass', sans-serif;
+    font-weight: normal;
+    font-size: 150%;
     display:inline-block;
     text-align: center;
     position: relative;
@@ -47,18 +50,18 @@ h3::after,h3::before{
     content: '';
     position: absolute;
     text-align: center;
-    height: 3px;
-    width: 100px;
+    height: 2px;
+    width: 350px;
     background-color: #A4A2A2;
     top: 0.6em;
 
 }
 h3::after{
-    left: -120px;
+    left: -380px;
 }
 
 h3::before{
-right: -120px;
+right: -380px;
 }
 #login {
     display: flex;
@@ -205,8 +208,6 @@ right: -120px;
     background: var(--Fondo);
     border-radius: 50%;
     position: relative;
-    z-index: 2;
-    box-shadow: 0px 10px 10px rgba(98, 9, 170, 0.1);
    top:50px;
 }
 
