--- a/assets/styles/sing_up.css
+++ b/assets/styles/sing_up.css
@@ -5,7 +5,6 @@
     --Negro: #000;
     --Blanco: #F9F9F9;
     --Oscuro: #;
-
     --fsizeProductos: 22px;
     --fsizeDescripcion: 26px;
 
@@ -52,57 +51,56 @@ main {
     display: flex;
     justify-content: center;
     backdrop-filter: blur(10px);
-    background-color: var(--Blanco);
+    background-color: var(--Secundario);
 }
 
-.tarsera div {
+.trasera div{
     margin: 100px 40px;
     color: var(--Negro);
     transition: all 500ms;
 }
 
-.trasera div p,
+
 .trasera div button {
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 .trasera div h3 {
     font-weight: 400;
-    font-size: 26px;
+    font-size: 20px;
+    margin-top: 50px;
 
 }
 .trasera button{
     padding: 10px 40px;
-    border: 2px solid var(--Principal);
-    background: transparent;
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 100;
+    text-align: center;
     justify-content: center;
     cursor: pointer;
-    color: var(--);
-    outline: none;
     transition: all 300ms;
-    border-radius: 100px;
+    background-color: transparent;
+    border: solid transparent;
+    margin-left: 60px;
 }
 
 .trasera button:hover{
-    background: var(--Principal);
-    color: var(--blanco);
+    color:gray;
 }
-
 .contenedor_registro{
     display: flex;
     align-items: center;
     width: 100%;
     max-width: 380px;
     position: relative;
-    top: -10%;
+    top: -185px;
     left: 10px;
+    transition: left 500ms cubic-bezier(0.175, 0.885, 0.320, 1.275);
 }
 .contenedor_registro form{
     width: 100%;
     padding: 80px 20px;
-    background-color: var(--Secundario);
+    background-color: var(--Blanco);
     position: absolute;
     border-radius: 20px;
 }
@@ -123,6 +121,7 @@ main {
     text-align: center;
     font-size: 16px;
     outline: none;
+    border-radius: 10px;
 }
 
 .contenedor_registro form button{
@@ -138,6 +137,7 @@ main {
     transition: all 300ms;
     border-radius: 100px;
     margin-top: 30px;
+    margin-left: 100px;
     
 }
 
@@ -147,14 +147,39 @@ main {
 }
 
 .formulario_login{
-    opacity:1;
-    display:block;
+    opacity: 1;
+    display: block;
 }
-.formulario_sing{
+.formulario_sign{
     display: none;
 }
 
-@media screen and (max-width)
+@media screen and (max-width: 850px){
 
+main{
+    margin-top: 50px;
+}
 
+.trasera{
+    max-width: 350px;
+    height: 300px;
+    flex-direction: column;
+    margin: auto;
+}
 
+.trasera div{
+    margin: 0px;
+    position: absolute;
+}
+
+.contenedor_registro{
+    top: -10px;
+    left: -5px;
+    margin: auto;
+}
+
+.contenedor_registro form{
+    position: relative;
+}
+
+}
