--- a/assets/styles/inicio.css
+++ b/assets/styles/inicio.css
@@ -165,3 +165,91 @@ footer{
     background-color: #ffffff;
     color: #333333;
 }
+
+h1 > span{
+    color:#00ADB5;
+}
+main{
+    width: 100%;
+    text-align: center;
+}
+section{
+    width: 90%;
+    margin-top: 20px;
+    display: inline-block;
+}
+.articulo{
+    margin: 0 5%;
+    text-align: left;
+    
+    background-color: #f2f2f2;    
+    
+    border-radius: 5px;
+    box-shadow: 0px 0px 15px gray;
+}
+.texto{
+    padding: 15px;
+}
+.texto h2{
+    border-bottom: 5px solid #00ADB5;
+    padding-bottom: 15px;
+    color: #00ADB5;
+}
+.texto p, .texto h2{
+    margin-bottom: 20px;
+}
+.imagen{
+    height: 35vh;
+    overflow: hidden;
+    margin-bottom: 10px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+.imagen img{
+    width:100%;
+}
+.clear{
+    height:60px;
+}
+
+@media screen and (max-width: 720px) and (min-width:480px) {
+    .articulo {
+        width: 100%;
+        margin: 0;
+        margin-bottom: 15px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .articulo {
+        width: 100%;
+        margin: 0;
+        margin-bottom: 15px;
+    }
+
+    section {
+        width: 90%;
+    }
+}
+
+/* Personalizar Scroll - No soportado: Firefox, IE, Edge */
+/* Width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f2f2f2;
+    border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #262228;
+    border-radius: 5px;
+}
