--- a/assets/styles/inicio.css
+++ b/assets/styles/inicio.css
@@ -192,7 +192,8 @@ text-align: center;
 }
 
 .parrte1{
-    grid-template-rows: repeat(2, 90%);
+    grid-template-rows: repeat(2, 70%);
+    text-align: center;
 }
 
 .formulario input[type="text"]{
