--- a/assets/styles/log_in.css
+++ b/assets/styles/log_in.css
@@ -226,7 +226,7 @@ right: -380px;
 .redes{
     position:center;
 }
-
+<link rel="stylesheet" href="assets/styles/log_in.css">
 @media all and (max-width: 775px) {
 
 
