--- a/assets/styles/inicio.css
+++ b/assets/styles/inicio.css
@@ -77,6 +77,9 @@ footer{
   cursor: pointer; /* Cambiamos el cursor */
   border-radius: 8px; /* Añadimos un borde redondeado */
 }
+.contenedor-icono i{
+    color: #b1ada8;
+}
 
 /* Formulario */
 * Handle */
