--- a/assets/styles/sign_up.css
+++ b/assets/styles/sign_up.css
@@ -35,7 +35,7 @@ main {
     width: 100%;
     padding: 20px;
     margin: auto;
-    margin-top: 100px;
+    margin-top: 10%;
 }
 
 .contenedor {
@@ -47,15 +47,26 @@ main {
 
 .trasera {
     width: 100%;
+    height: 50vh;
     padding: 10px 20px;
     display: flex;
     justify-content: center;
     backdrop-filter: blur(10px);
     background-color: var(--Secundario);
+    border-radius: 20px;
 }
-
+.trasera img{
+    width: 30%;
+    margin-left: 13vh;
+}
+.trasera h4{
+    font-size: 70%;
+    margin-left: 10vh;
+    margin-bottom: 25%;
+}
 .trasera div{
-    margin: 100px 40px;
+   margin-left: 40px;
+   margin-top: 10px;
     color: var(--Negro);
     transition: all 500ms;
 }
@@ -94,21 +105,21 @@ main {
     max-width: 380px;
     position: relative;
     top: -185px;
-    left: 10px;
+    left: 0px;
     transition: left 500ms cubic-bezier(0.175, 0.885, 0.320, 1.275);
 }
 .contenedor_registro form{
-    width: 100%;
+    width: 103%;
+    height: 58vh;
     padding: 80px 20px;
     background-color: var(--Blanco);
     position: absolute;
-    border-radius: 20px;
 }
 
 .contenedor_registro form h2{
     font: 30px;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     color:var(--Negro);
 }
 
