--- a/assets/styles/inicio.css
+++ b/assets/styles/inicio.css
@@ -78,9 +78,9 @@ footer{
   border-radius: 8px; /* Añadimos un borde redondeado */
 }
 .contenedor-icono i{
-    color: #b1ada8;
+    font-size:30px ;
+  color: #A4A2A2;
 }
-
 /* Formulario */
 * Handle */
 ::-webkit-scrollbar-thumb {
