--- a/assets/styles/sign_up.css
+++ b/assets/styles/sign_up.css
@@ -20,7 +20,7 @@
     -o-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -ms-box-sizing: border-box;
-
+    font-family: 'Overpass', sans-serif;
 
 }
 
@@ -35,7 +35,7 @@ main {
     width: 100%;
     padding: 20px;
     margin: auto;
-    margin-top: 10%;
+    margin-top: 5%;
 }
 
 .contenedor {
@@ -46,23 +46,25 @@ main {
 }
 
 .trasera {
-    width: 100%;
-    height: 50vh;
+    width: 110%;
+    height: 75vh;
     padding: 10px 20px;
     display: flex;
     justify-content: center;
     backdrop-filter: blur(10px);
-    /* background-color: var(--Secundario); */
+    /*background-color: var(--Secundario); */
     border-radius: 20px;
 }
 .trasera img{
-    width: 30%;
+    width: 40%;
     margin-left: 13vh;
+    margin-top: 5%;
 }
 .trasera h4{
-    font-size: 70%;
+    font-size: 80%;
     margin-left: 10vh;
-    margin-bottom: 25%;
+    margin-bottom: 30%;
+    margin-top: 1%;
 }
 .trasera div{
    margin-left: 40px;
@@ -110,7 +112,7 @@ main {
 }
 .contenedor_registro form{
     width: 103%;
-    height: 58vh;
+    height: 85vh;
     padding: 80px 20px;
     background-color: var(--Blanco);
     position: absolute;
