--- a/assets/styles/producto.css
+++ b/assets/styles/producto.css
@@ -62,6 +62,19 @@ footer {
     border-radius: 8px;
     background-color: var(--Secundario);
 }
+.modal{
+	position: fixed;
+	top: 0;
+	left: 0;
+	background: rgba(0,0,0,0.5);
+	transition: all 500ms ease;
+	opacity: 0;
+	visibility: hidden;
+}
+#btn-modal:checked ~ .modal{
+	opacity: 1;
+	visibility: visible;
+} 
 .contenedor{
 	width: 400px;
 	height: 400px;
