--- a/assets/styles/producto.css
+++ b/assets/styles/producto.css
@@ -62,69 +62,33 @@ footer {
     border-radius: 8px;
     background-color: var(--Secundario);
 }
-.modal{
-	position: fixed;
-	top: 0;
-	left: 0;
-	background: rgba(0,0,0,0.5);
-	transition: all 500ms ease;
-	opacity: 0;
-	visibility: hidden;
+.botones {
+    width: 30%;
+    margin-top: 10px;
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    margin-left:20px;
+
+    .boton {
+        padding: 10px;
+        color: #fff;
+        width: 80%;
+        display: block;
+        background: #000;
+        text-align: center;
+        border-radius: 20px;
+        transition: .3s ease all;
+        &.primario {
+            background: #FE8744;
+            &:hover {
+                background: #e0ae77;
+            }
+        }
+
+     
+    }
 }
-#btn-modal:checked ~ .modal{
-	opacity: 1;
-	visibility: visible;
-} 
-.contenedor{
-	width: 400px;
-	height: 400px;
-	margin: auto;
-	background: #fff;
-	box-shadow: 1px 7px 25px rgba(0,0,0,0.6);
-	transition: all 500ms ease;
-	position: relative;
-	transform: translateY(-30%);
-}
-#btn-modal:checked ~ .modal .contenedor{
-	transform: translateY(0%);
-} 
-.contenedor header{
-	padding: 10px;
-	background: #db8046;
-	color: #fff;
-}
-.contenedor label{
-	position: absolute;
-	top: 20px;
-	right: 10px;
-	color: #fff;
-	font-size: 15px;
-	cursor: pointer;
-}
-.contenido{
-	width: 100%;
-	padding: 10px; 
-}
-.contenido h3{
-	margin-bottom: 10px;
-}
-.contenido p{
-	margin-bottom: 7px;
-}
-#btn-modal{
-	display: none;
-}
-.lbl-modal{
-   
-	background: #FE8744;
-	padding: 10px 15px;
-	border-radius: 30px;
-	cursor: pointer;
- 
-}
-@media only screen and (min-width:320px) and (max-width:768px){
-	.contenedor{
-		width: 95%;
-	}
-}
+
+
 
