--- a/assets/styles/inicio.css
+++ b/assets/styles/inicio.css
@@ -19,19 +19,19 @@
     display: flex;
     flex-direction: row;
     text-align: center;
+    height: 13vh;
 }
 
 #Logo h5 {
     font-size: 2.2vh;
-    margin-top: 3%;
     font-family: 'Overpass', sans-serif;
     
 }
 
 #Logo img {
     width: 15vh;
-    margin-top: 10%;
     margin-left: 5%;
+    margin-top: 5%;
 }
 #NomPrin{
     display: flex;
@@ -42,8 +42,8 @@
 
 
 #BarBusque {
-    
-    display:grid;
+    padding-top: 3%;
+    display:flex;
     justify-content: center;
 }
 #BarBusque nav{
@@ -60,16 +60,18 @@
     margin-left: 0.5rem;
 }
 
-#Ubi{
-    text-align: center;
-}
 #IniSes{
     margin-top: 19%;
 }
-
-
-#Ubi{
-    text-align: center;
+#Config{
+    height: 100%;
+    
+}
+#Config .nav{
+    height: 100%;  
+}
+#navbar{
+    margin-top: 0%;
 }
 
 
@@ -78,12 +80,10 @@
   background-color: var(--Principal); /* Color de fondo */
   border: none; /* Quitamos el borde */
   color: white; /* Color del texto */
-  padding: 10px 20px; /* Añadimos un poco de padding para hacerlo más grande */
   text-align: center; /* Centramos el texto */
   text-decoration: none; /* Quitamos la decoración */
   display: inline-block; /* Lo hacemos un elemento en línea */
   font-size: 16px; /* Tamaño de letra */
-  margin: 4px 2px; /* Añadimos un poco de margen */
   cursor: pointer; /* Cambiamos el cursor */
   border-radius: 8px; /* Añadimos un borde redondeado */
 }
