--- a/assets/styles/inicio.css
+++ b/assets/styles/inicio.css
@@ -60,9 +60,6 @@
     margin-left: 0.5rem;
 }
 
-#IniSes{
-    margin-top: 19%;
-}
 #Config{
     height: 100%;
     
@@ -92,7 +89,7 @@
   color: #A4A2A2;
 }
 /* Formulario */
-* Handle */
+/* Handle */
 ::-webkit-scrollbar-thumb {
     background: #262228;
     border-radius: 5px;
@@ -214,5 +211,41 @@ text-align: center;
     border-radius: 7px;
 }
 
+/*Media Queries*/
 
+/*Desktop*/
+@media screen and (min-width: 992px ) {
+    .icon-menu{
+    
+    }
+}
+
+/*Tablet*/
+@media screen and (min-width: 601px) and (max-width: 991px){
+    #CtnHead{
+        height: 25vh;
+    }
+    #Config{
+        display: flex;
+        justify-content: center;
+    }
+    #BarBusque{
+        margin-right: 10%;
+    }
+
+}
+
+/*Moviles*/
+@media screen and (min-width: 280px) and (max-width: 600px) {
+    #BarBusque{
+        display: none;
+    }
+    #CtnHead{
+        height: 29vh;
+    }
+    #Config{
+        display: flex;
+        justify-content: center;
+    }
+}
 
