--- a/assets/styles/inicio.css
+++ b/assets/styles/inicio.css
@@ -59,7 +59,9 @@
     margin-right: 0.5rem;
     margin-left: 0.5rem;
 }
-
+.texto{
+    text-align: center;
+}
 #Config{
     height: 100%;
     
@@ -140,8 +142,18 @@
     width: 100%;
     height: 100%;
     overflow: auto;
+    text-align: center;
   }
-  
+  .cerrar{
+    cursor: pointer;
+    width: 3%;
+    border-radius: 50%;
+    color:red;
+    
+ }
+  .cerrar:hover{
+    box-shadow: 0 7px 15px var(--gris);  
+}
   .modal-content {
     background-color: var(--gris);
     margin: 10% auto;
