--- a/assets/styles/producto.css
+++ b/assets/styles/producto.css
@@ -49,6 +49,11 @@ footer {
     color: var(--Principal);
 }
 
+#foto{
+    width: 100;
+    height: 50;
+}
+
 .producto{
     width: 90%;
     margin: 20px auto;
